fixed copy buttons on mobile

--- a/styles-sd.css
+++ b/styles-sd.css
@@ -52,7 +52,7 @@ hr {
 /*----------------------------------------------------------*/
 /*-----------------------BIG TITLE--------------------------*/
 /*----------------------------------------------------------*/
-:root {  
+:root {
   --orange: rgb(247, 126, 33);
   --gold: rgb(250, 194, 19);
   --yellow: rgb(254, 249, 167);
@@ -63,17 +63,18 @@ hr {
   from {
     background-position: 0% center;
   }
-  
+
   to {
     background-position: -200% center;
   }
 }
 
 @keyframes scale {
-  from, to {
+  from,
+  to {
     transform: scale(0);
   }
-  
+
   50% {
     transform: scale(1);
   }
@@ -83,7 +84,7 @@ hr {
   from {
     transform: rotate(0deg);
   }
-  
+
   to {
     transform: rotate(180deg);
   }
@@ -107,7 +108,7 @@ h5 > .magic {
 
 h5 > .magic > .magic-star {
   --size: clamp(20px, 1.5vw, 30px);
-  
+
   animation: scale 700ms ease forwards;
   display: block;
   height: var(--size);
@@ -157,7 +158,6 @@ h5 > .magic > .magic-text {
 /*-----------------------BIG BTN----------------------------*/
 /*----------------------------------------------------------*/
 
-
 .big-buttons {
   display: flex;
   justify-content: center;
@@ -175,7 +175,7 @@ h5 > .magic > .magic-text {
   text-transform: uppercase;
   color: var(--gold);
   text-decoration: none;
-  border: 3px solid var(--gold); 
+  border: 3px solid var(--gold);
   border-radius: 20px;
   line-height: 40px;
 }
@@ -185,7 +185,7 @@ h5 > .magic > .magic-text {
   border-color: var(--yellow);
 }
 .big-btn > svg {
-  fill:rgb(250, 194, 19);
+  fill: rgb(250, 194, 19);
 }
 
 .big-btn:hover > svg {
@@ -202,7 +202,6 @@ h5 > .magic > .magic-text {
     width: 30%;
   }
 }
-
 
 /*----------------------------------------------------------*/
 /*-----------------------NAV BAR----------------------------*/
@@ -812,7 +811,7 @@ div.card.show div.flap2 {
   font-weight: bold;
   letter-spacing: 0.025rem;
   text-transform: uppercase;
-  color: white;
+  color: rgb(0, 0, 0);
   background-color: FFC95F;
   border: none;
   background-color: #ffc95f;
